manifest/03_svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: creg
  name: web
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 8137
      targetPort: 8137
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: creg
spec:
  type: NodePort
  selector:
    app: db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
    nodePort: 30432
