manifest/04_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: creg
spec:
  ingressClassName: nginx
  rules:
  - host: creg.boardmaps.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 8137
